[gd_scene load_steps=12 format=3 uid="uid://dav3my1pdc574"]

[ext_resource type="Script" path="res://elements/spaceship/spaceship.gd" id="1_n3f7r"]
[ext_resource type="Texture2D" uid="uid://x5jcbrqqtw3" path="res://assets/chars/Spaceship.png" id="2_k4djm"]
[ext_resource type="AudioStream" uid="uid://ci2e5tc01rohv" path="res://assets/sound/Balloon Pop 1.wav" id="3_87bco"]
[ext_resource type="AudioStream" uid="uid://dkgkgka16jq37" path="res://assets/sound/Boss hit 1.wav" id="4_p8gbd"]

[sub_resource type="AtlasTexture" id="AtlasTexture_6g8m7"]
atlas = ExtResource("2_k4djm")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_ixrwb"]
atlas = ExtResource("2_k4djm")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_41w55"]
atlas = ExtResource("2_k4djm")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_mv8xd"]
atlas = ExtResource("2_k4djm")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_wxndw"]
atlas = ExtResource("2_k4djm")
region = Rect2(128, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_6cosi"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_6g8m7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ixrwb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_41w55")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mv8xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wxndw")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_rngu1"]
radius = 7.07107

[node name="Spaceship" type="CharacterBody2D"]
collision_layer = 2
script = ExtResource("1_n3f7r")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
scale = Vector2(0.998385, 1)
sprite_frames = SubResource("SpriteFrames_6cosi")
animation = &"Idle"
autoplay = "Idle"
frame_progress = 0.644642

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_rngu1")

[node name="ShotCooldownTimer" type="Timer" parent="."]
wait_time = 0.5
one_shot = true

[node name="ShotPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("3_87bco")

[node name="DamagePlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_p8gbd")
